--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
 red - #ee5253
+ */
 
-*/
-
+ body {
+  background-image: url(/Users/nate/Mod_1/whats-for-dinner/assets/burger-friends.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1000px;
+}
