--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,21 @@
-/* font-family: 'Roboto', sans-serif;
+/* font-family: 'Roboto', sans-serif; */
 
-COLORS
+/* COLORS
 teal - #0fb9b1;
 frosted white - rgba(225, 225, 225, .9);
 grey - #95a5a6;
-red - #ee5253
- */
+red - #ee5253 */
 
- body {
+body {
   background-image: url(/Users/nate/Mod_1/whats-for-dinner/assets/burger-friends.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 1000px;
 }
+
+.nav {
+  font-family: 'Roboto', sans-serif;
+  background-color: #0fb9b1;
+}
+
+
