--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,32 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 1000px;
+  margin: 0;
 }
 
 .nav {
   font-family: 'Roboto', sans-serif;
   background-color: #0fb9b1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: baseline;
+  align-content: stretch;
+}
+
+.title {
+  margin-top: 0;
+  padding-top: 20px;
+  padding-left: 20px;
+}
+
+.add-recipe-btn {
+    background: rgba(225, 225, 225, .9);
+    border: 0;
+    border-radius: 5px;
+    padding: 7px;
+    margin-right: 20px;
 }
 
 
