--- a/styles.css
+++ b/styles.css
@@ -39,4 +39,30 @@ body {
     margin-right: 20px;
 }
 
+.box {
+  width: auto;
+  border: 10px;
+  padding: 20px;
+  margin: 10px;
+  background-color: rgba(255, 255, 255, 0.42);
+}
+
+.box:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+}
+
+.box:nth-child(2) {
+
+}
+
+.parent1 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: space-between;  
+    font-family: 'Roboto', sans-serif;
+}
 
