Adds updated svg and jpg path.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/Users/nate/Mod_1/whats-for-dinner/assets/burger-friends.jpg);
+  background-image: url(assets/burger-friends.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   height: 1000px;
